--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,42 @@
 argon2-cffi==20.1.0
-
 bcrypt==3.2.0
 beautifulsoup4==4.9.3
 certifi==2020.12.5
 cffi==1.14.4
+charset-normalizer==2.0.9
+cloudinary==1.29.0
 crispy-forms-gds==0.2.2
+cryptography==3.4.8
+defusedxml==0.7.1
+dj-database-url==0.5.0
+django-allauth==0.47.0
 django-bootstrap4==2.3.1
 django-braces==1.14.0
+django-cloudinary-storage==0.3.0
 django-crispy-forms==1.10.0
+django-filter==2.4.0
+django-heroku==0.3.1
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
 gunicorn==20.1.0
+idna==3.3
+joblib==1.0.1
+misaka==2.1.1
+numpy==1.20.3
+oauthlib==3.1.1
 Pillow==8.1.0
 pycparser==2.20
 Pygments==2.7.4
+PyJWT==2.1.0
+python3-openid==3.2.0
+requests==2.26.0
+requests-oauthlib==1.3.0
+scikit-learn==0.24.2
+scipy==1.7.0
 six==1.15.0
+sklearn==0.0
 soupsieve==2.1
+threadpoolctl==2.1.0
+urllib3==1.26.7
 whitenoise==5.2.0
 wincertstore==0.2
